# serializer version: 1
# name: test_forecast_service[get_forecasts]
  dict({
    'weather.met_office_wavertree': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 9.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 26,
          'pressure': 987.48,
          'temperature': 12.7,
          'templow': 8.2,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 42.66,
          'wind_speed': 23.94,
        }),
        dict({
          'apparent_temperature': 5.3,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 5,
          'pressure': 994.88,
          'temperature': 9.8,
          'templow': 7.7,
          'uv_index': 1,
          'wind_bearing': 251,
          'wind_gust_speed': 52.16,
          'wind_speed': 30.67,
        }),
        dict({
          'apparent_temperature': 5.9,
          'condition': 'partlycloudy',
          'datetime': '2024-11-26T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 6,
          'pressure': 1012.93,
          'temperature': 8.7,
          'templow': 3.8,
          'uv_index': 1,
          'wind_bearing': 265,
          'wind_gust_speed': 34.49,
          'wind_speed': 20.45,
        }),
        dict({
          'apparent_temperature': 3.3,
          'condition': 'rainy',
          'datetime': '2024-11-27T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 43,
          'pressure': 1014.39,
          'temperature': 6.7,
          'templow': 2.4,
          'uv_index': 1,
          'wind_bearing': 8,
          'wind_gust_speed': 32.18,
          'wind_speed': 18.54,
        }),
        dict({
          'apparent_temperature': 3.0,
          'condition': 'cloudy',
          'datetime': '2024-11-28T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1025.12,
          'temperature': 5.7,
          'templow': 3.8,
          'uv_index': 1,
          'wind_bearing': 104,
          'wind_gust_speed': 22.36,
          'wind_speed': 12.64,
        }),
        dict({
          'apparent_temperature': 4.9,
          'condition': 'cloudy',
          'datetime': '2024-11-29T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 11,
          'pressure': 1019.85,
          'temperature': 8.2,
          'templow': 7.0,
          'uv_index': 1,
          'wind_bearing': 137,
          'wind_gust_speed': 38.59,
          'wind_speed': 23.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].1
  dict({
    'weather.met_office_wavertree': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 6.8,
          'condition': 'rainy',
          'datetime': '2024-11-23T13:00:00+00:00',
          'precipitation': 0.52,
          'precipitation_probability': 65,
          'pressure': 986.83,
          'temperature': 9.9,
          'uv_index': 1,
          'wind_bearing': 178,
          'wind_gust_speed': 55.73,
          'wind_speed': 25.42,
        }),
        dict({
          'apparent_temperature': 8.4,
          'condition': 'cloudy',
          'datetime': '2024-11-23T14:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 12,
          'pressure': 986.34,
          'temperature': 11.1,
          'uv_index': 1,
          'wind_bearing': 179,
          'wind_gust_speed': 49.0,
          'wind_speed': 22.86,
        }),
        dict({
          'apparent_temperature': 9.8,
          'condition': 'rainy',
          'datetime': '2024-11-23T15:00:00+00:00',
          'precipitation': 0.09,
          'precipitation_probability': 37,
          'pressure': 986.13,
          'temperature': 12.0,
          'uv_index': 1,
          'wind_bearing': 182,
          'wind_gust_speed': 40.1,
          'wind_speed': 18.5,
        }),
        dict({
          'apparent_temperature': 10.8,
          'condition': 'rainy',
          'datetime': '2024-11-23T16:00:00+00:00',
          'precipitation': 0.27,
          'precipitation_probability': 36,
          'pressure': 986.6,
          'temperature': 12.6,
          'uv_index': 0,
          'wind_bearing': 197,
          'wind_gust_speed': 35.86,
          'wind_speed': 15.44,
        }),
        dict({
          'apparent_temperature': 11.3,
          'condition': 'cloudy',
          'datetime': '2024-11-23T17:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 11,
          'pressure': 987.1,
          'temperature': 12.9,
          'uv_index': 0,
          'wind_bearing': 203,
          'wind_gust_speed': 35.57,
          'wind_speed': 15.59,
        }),
        dict({
          'apparent_temperature': 11.3,
          'condition': 'cloudy',
          'datetime': '2024-11-23T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 7,
          'pressure': 987.1,
          'temperature': 13.0,
          'uv_index': 0,
          'wind_bearing': 177,
          'wind_gust_speed': 31.21,
          'wind_speed': 15.52,
        }),
        dict({
          'apparent_temperature': 11.1,
          'condition': 'pouring',
          'datetime': '2024-11-23T19:00:00+00:00',
          'precipitation': 0.51,
          'precipitation_probability': 74,
          'pressure': 986.82,
          'temperature': 13.0,
          'uv_index': 0,
          'wind_bearing': 177,
          'wind_gust_speed': 37.44,
          'wind_speed': 17.46,
        }),
        dict({
          'apparent_temperature': 11.2,
          'condition': 'cloudy',
          'datetime': '2024-11-23T20:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 11,
          'pressure': 986.92,
          'temperature': 13.7,
          'uv_index': 0,
          'wind_bearing': 187,
          'wind_gust_speed': 45.97,
          'wind_speed': 22.72,
        }),
        dict({
          'apparent_temperature': 11.7,
          'condition': 'rainy',
          'datetime': '2024-11-23T21:00:00+00:00',
          'precipitation': 0.11,
          'precipitation_probability': 30,
          'pressure': 986.82,
          'temperature': 14.0,
          'uv_index': 0,
          'wind_bearing': 178,
          'wind_gust_speed': 44.32,
          'wind_speed': 22.0,
        }),
        dict({
          'apparent_temperature': 11.4,
          'condition': 'cloudy',
          'datetime': '2024-11-23T22:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 12,
          'pressure': 986.31,
          'temperature': 14.0,
          'uv_index': 0,
          'wind_bearing': 176,
          'wind_gust_speed': 47.84,
          'wind_speed': 23.65,
        }),
        dict({
          'apparent_temperature': 11.4,
          'condition': 'cloudy',
          'datetime': '2024-11-23T23:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'pressure': 985.71,
          'temperature': 14.3,
          'uv_index': 0,
          'wind_bearing': 176,
          'wind_gust_speed': 51.44,
          'wind_speed': 26.57,
        }),
        dict({
          'apparent_temperature': 11.5,
          'condition': 'cloudy',
          'datetime': '2024-11-24T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'pressure': 984.92,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 171,
          'wind_gust_speed': 50.69,
          'wind_speed': 26.78,
        }),
        dict({
          'apparent_temperature': 11.6,
          'condition': 'rainy',
          'datetime': '2024-11-24T01:00:00+00:00',
          'precipitation': 0.17,
          'precipitation_probability': 40,
          'pressure': 984.22,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 170,
          'wind_gust_speed': 50.11,
          'wind_speed': 25.78,
        }),
        dict({
          'apparent_temperature': 11.3,
          'condition': 'pouring',
          'datetime': '2024-11-24T02:00:00+00:00',
          'precipitation': 0.21,
          'precipitation_probability': 74,
          'pressure': 983.51,
          'temperature': 14.2,
          'uv_index': 0,
          'wind_bearing': 176,
          'wind_gust_speed': 52.06,
          'wind_speed': 26.89,
        }),
        dict({
          'apparent_temperature': 11.7,
          'condition': 'pouring',
          'datetime': '2024-11-24T03:00:00+00:00',
          'precipitation': 0.34,
          'precipitation_probability': 73,
          'pressure': 983.1,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 187,
          'wind_gust_speed': 51.55,
          'wind_speed': 26.1,
        }),
        dict({
          'apparent_temperature': 11.7,
          'condition': 'rainy',
          'datetime': '2024-11-24T04:00:00+00:00',
          'precipitation': 0.28,
          'precipitation_probability': 50,
          'pressure': 983.1,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 189,
          'wind_gust_speed': 49.68,
          'wind_speed': 25.52,
        }),
        dict({
          'apparent_temperature': 11.8,
          'condition': 'rainy',
          'datetime': '2024-11-24T05:00:00+00:00',
          'precipitation': 0.25,
          'precipitation_probability': 47,
          'pressure': 983.3,
          'temperature': 14.3,
          'uv_index': 0,
          'wind_bearing': 202,
          'wind_gust_speed': 45.72,
          'wind_speed': 23.69,
        }),
        dict({
          'apparent_temperature': 10.7,
          'condition': 'rainy',
          'datetime': '2024-11-24T06:00:00+00:00',
          'precipitation': 0.3,
          'precipitation_probability': 42,
          'pressure': 983.96,
          'temperature': 13.4,
          'uv_index': 0,
          'wind_bearing': 216,
          'wind_gust_speed': 45.83,
          'wind_speed': 24.16,
        }),
        dict({
          'apparent_temperature': 10.1,
          'condition': 'rainy',
          'datetime': '2024-11-24T07:00:00+00:00',
          'precipitation': 0.16,
          'precipitation_probability': 40,
          'pressure': 984.58,
          'temperature': 12.5,
          'uv_index': 0,
          'wind_bearing': 214,
          'wind_gust_speed': 39.71,
          'wind_speed': 20.59,
        }),
        dict({
          'apparent_temperature': 9.5,
          'condition': 'rainy',
          'datetime': '2024-11-24T08:00:00+00:00',
          'precipitation': 0.08,
          'precipitation_probability': 38,
          'pressure': 985.48,
          'temperature': 11.9,
          'uv_index': 0,
          'wind_bearing': 209,
          'wind_gust_speed': 37.08,
          'wind_speed': 19.73,
        }),
        dict({
          'apparent_temperature': 9.1,
          'condition': 'rainy',
          'datetime': '2024-11-24T09:00:00+00:00',
          'precipitation': 0.04,
          'precipitation_probability': 26,
          'pressure': 986.38,
          'temperature': 11.5,
          'uv_index': 1,
          'wind_bearing': 201,
          'wind_gust_speed': 35.96,
          'wind_speed': 19.58,
        }),
        dict({
          'apparent_temperature': 9.0,
          'condition': 'rainy',
          'datetime': '2024-11-24T10:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 25,
          'pressure': 986.96,
          'temperature': 11.5,
          'uv_index': 1,
          'wind_bearing': 199,
          'wind_gust_speed': 37.01,
          'wind_speed': 20.59,
        }),
        dict({
          'apparent_temperature': 9.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T11:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 6,
          'pressure': 987.55,
          'temperature': 11.7,
          'uv_index': 1,
          'wind_bearing': 199,
          'wind_gust_speed': 36.22,
          'wind_speed': 20.45,
        }),
        dict({
          'apparent_temperature': 9.0,
          'condition': 'cloudy',
          'datetime': '2024-11-24T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.48,
          'temperature': 11.8,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 42.66,
          'wind_speed': 23.94,
        }),
        dict({
          'apparent_temperature': 8.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T13:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.57,
          'temperature': 11.8,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 45.36,
          'wind_speed': 25.45,
        }),
        dict({
          'apparent_temperature': 8.6,
          'condition': 'cloudy',
          'datetime': '2024-11-24T14:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.37,
          'temperature': 11.7,
          'uv_index': 1,
          'wind_bearing': 201,
          'wind_gust_speed': 46.94,
          'wind_speed': 26.39,
        }),
        dict({
          'apparent_temperature': 8.5,
          'condition': 'cloudy',
          'datetime': '2024-11-24T15:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'pressure': 987.27,
          'temperature': 11.6,
          'uv_index': 1,
          'wind_bearing': 198,
          'wind_gust_speed': 46.87,
          'wind_speed': 26.35,
        }),
        dict({
          'apparent_temperature': 8.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T16:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.08,
          'temperature': 11.2,
          'uv_index': 0,
          'wind_bearing': 196,
          'wind_gust_speed': 46.22,
          'wind_speed': 25.38,
        }),
        dict({
          'apparent_temperature': 8.0,
          'condition': 'cloudy',
          'datetime': '2024-11-24T17:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'pressure': 986.89,
          'temperature': 11.0,
          'uv_index': 0,
          'wind_bearing': 194,
          'wind_gust_speed': 45.68,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 7.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.7,
          'temperature': 10.9,
          'uv_index': 0,
          'wind_bearing': 196,
          'wind_gust_speed': 46.15,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 7.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T19:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.69,
          'temperature': 10.8,
          'uv_index': 0,
          'wind_bearing': 196,
          'wind_gust_speed': 45.43,
          'wind_speed': 24.95,
        }),
        dict({
          'apparent_temperature': 7.7,
          'condition': 'cloudy',
          'datetime': '2024-11-24T20:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.78,
          'temperature': 10.7,
          'uv_index': 0,
          'wind_bearing': 202,
          'wind_gust_speed': 45.07,
          'wind_speed': 24.55,
        }),
        dict({
          'apparent_temperature': 7.5,
          'condition': 'cloudy',
          'datetime': '2024-11-24T21:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.77,
          'temperature': 10.5,
          'uv_index': 0,
          'wind_bearing': 203,
          'wind_gust_speed': 46.4,
          'wind_speed': 25.49,
        }),
        dict({
          'apparent_temperature': 7.3,
          'condition': 'cloudy',
          'datetime': '2024-11-24T22:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'pressure': 987.04,
          'temperature': 10.5,
          'uv_index': 0,
          'wind_bearing': 204,
          'wind_gust_speed': 48.24,
          'wind_speed': 26.68,
        }),
        dict({
          'apparent_temperature': 7.1,
          'condition': 'cloudy',
          'datetime': '2024-11-24T23:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.04,
          'temperature': 10.3,
          'uv_index': 0,
          'wind_bearing': 207,
          'wind_gust_speed': 50.44,
          'wind_speed': 27.72,
        }),
        dict({
          'apparent_temperature': 7.1,
          'condition': 'cloudy',
          'datetime': '2024-11-25T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 23,
          'pressure': 987.12,
          'temperature': 10.2,
          'uv_index': 0,
          'wind_bearing': 211,
          'wind_gust_speed': 47.2,
          'wind_speed': 26.39,
        }),
        dict({
          'apparent_temperature': 6.9,
          'condition': 'cloudy',
          'datetime': '2024-11-25T01:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 11,
          'pressure': 987.41,
          'temperature': 10.0,
          'uv_index': 0,
          'wind_bearing': 215,
          'wind_gust_speed': 45.04,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 6.4,
          'condition': 'cloudy',
          'datetime': '2024-11-25T02:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 7,
          'pressure': 987.88,
          'temperature': 9.6,
          'uv_index': 0,
          'wind_bearing': 222,
          'wind_gust_speed': 46.87,
          'wind_speed': 25.7,
        }),
        dict({
          'apparent_temperature': 6.1,
          'condition': 'cloudy',
          'datetime': '2024-11-25T03:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 988.16,
          'temperature': 9.3,
          'uv_index': 0,
          'wind_bearing': 226,
          'wind_gust_speed': 44.71,
          'wind_speed': 24.88,
        }),
        dict({
          'apparent_temperature': 5.8,
          'condition': 'cloudy',
          'datetime': '2024-11-25T04:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 988.58,
          'temperature': 9.1,
          'uv_index': 0,
          'wind_bearing': 228,
          'wind_gust_speed': 45.22,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 5.4,
          'condition': 'clear-night',
          'datetime': '2024-11-25T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 989.1,
          'temperature': 8.8,
          'uv_index': 0,
          'wind_bearing': 232,
          'wind_gust_speed': 47.23,
          'wind_speed': 26.14,
        }),
        dict({
          'apparent_temperature': 5.1,
          'condition': 'clear-night',
          'datetime': '2024-11-25T06:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 989.61,
          'temperature': 8.7,
          'uv_index': 0,
          'wind_bearing': 235,
          'wind_gust_speed': 48.2,
          'wind_speed': 26.35,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'clear-night',
          'datetime': '2024-11-25T07:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 990.61,
          'temperature': 8.6,
          'uv_index': 0,
          'wind_bearing': 240,
          'wind_gust_speed': 47.81,
          'wind_speed': 26.78,
        }),
        dict({
          'apparent_temperature': 4.8,
          'condition': 'clear-night',
          'datetime': '2024-11-25T08:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 991.61,
          'temperature': 8.4,
          'uv_index': 0,
          'wind_bearing': 243,
          'wind_gust_speed': 47.56,
          'wind_speed': 26.86,
        }),
        dict({
          'apparent_temperature': 4.8,
          'condition': 'sunny',
          'datetime': '2024-11-25T09:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 992.52,
          'temperature': 8.4,
          'uv_index': 1,
          'wind_bearing': 243,
          'wind_gust_speed': 47.84,
          'wind_speed': 27.32,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T10:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 993.42,
          'temperature': 8.7,
          'uv_index': 1,
          'wind_bearing': 245,
          'wind_gust_speed': 49.79,
          'wind_speed': 28.8,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T11:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 3,
          'pressure': 994.24,
          'temperature': 8.8,
          'uv_index': 1,
          'wind_bearing': 249,
          'wind_gust_speed': 52.09,
          'wind_speed': 30.38,
        }),
        dict({
          'apparent_temperature': 5.2,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T12:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 2,
          'pressure': 994.88,
          'temperature': 8.9,
          'uv_index': 1,
          'wind_bearing': 251,
          'wind_gust_speed': 52.16,
          'wind_speed': 30.67,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].2
  dict({
    'weather.met_office_wavertree': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 4.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 23,
          'pressure': 987.12,
          'temperature': 10.7,
          'templow': 7.0,
          'uv_index': None,
          'wind_bearing': 211,
          'wind_gust_speed': 47.2,
          'wind_speed': 26.39,
        }),
        dict({
          'apparent_temperature': 9.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 26,
          'pressure': 987.48,
          'temperature': 15.2,
          'templow': 11.9,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 42.66,
          'wind_speed': 23.94,
        }),
        dict({
          'apparent_temperature': 4.2,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 6,
          'pressure': 1004.81,
          'temperature': 9.3,
          'templow': 4.4,
          'uv_index': None,
          'wind_bearing': 262,
          'wind_gust_speed': 47.99,
          'wind_speed': 29.23,
        }),
        dict({
          'apparent_temperature': 5.3,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 5,
          'pressure': 994.88,
          'temperature': 11.0,
          'templow': 8.4,
          'uv_index': 1,
          'wind_bearing': 251,
          'wind_gust_speed': 52.16,
          'wind_speed': 30.67,
        }),
        dict({
          'apparent_temperature': 1.3,
          'condition': 'cloudy',
          'datetime': '2024-11-26T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 44,
          'pressure': 1013.9,
          'temperature': 7.5,
          'templow': -0.4,
          'uv_index': None,
          'wind_bearing': 74,
          'wind_gust_speed': 19.51,
          'wind_speed': 11.41,
        }),
        dict({
          'apparent_temperature': 5.9,
          'condition': 'partlycloudy',
          'datetime': '2024-11-26T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 6,
          'pressure': 1012.93,
          'temperature': 10.1,
          'templow': 6.5,
          'uv_index': 1,
          'wind_bearing': 265,
          'wind_gust_speed': 34.49,
          'wind_speed': 20.45,
        }),
        dict({
          'apparent_temperature': 0.2,
          'condition': 'clear-night',
          'datetime': '2024-11-27T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1021.75,
          'temperature': 7.2,
          'templow': -3.0,
          'uv_index': None,
          'wind_bearing': 31,
          'wind_gust_speed': 19.94,
          'wind_speed': 11.84,
        }),
        dict({
          'apparent_temperature': 3.3,
          'condition': 'rainy',
          'datetime': '2024-11-27T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 43,
          'pressure': 1014.39,
          'temperature': 11.1,
          'templow': 3.0,
          'uv_index': 1,
          'wind_bearing': 8,
          'wind_gust_speed': 32.18,
          'wind_speed': 18.54,
        }),
        dict({
          'apparent_temperature': 1.6,
          'condition': 'cloudy',
          'datetime': '2024-11-28T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1023.82,
          'temperature': 8.2,
          'templow': -1.9,
          'uv_index': None,
          'wind_bearing': 131,
          'wind_gust_speed': 33.16,
          'wind_speed': 20.05,
        }),
        dict({
          'apparent_temperature': 3.0,
          'condition': 'cloudy',
          'datetime': '2024-11-28T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1025.12,
          'temperature': 9.4,
          'templow': 1.3,
          'uv_index': 1,
          'wind_bearing': 104,
          'wind_gust_speed': 22.36,
          'wind_speed': 12.64,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'cloudy',
          'datetime': '2024-11-29T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 13,
          'pressure': 1016.88,
          'temperature': 10.8,
          'templow': -1.9,
          'uv_index': None,
          'wind_bearing': 151,
          'wind_gust_speed': 33.16,
          'wind_speed': 20.12,
        }),
        dict({
          'apparent_temperature': 4.9,
          'condition': 'cloudy',
          'datetime': '2024-11-29T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 11,
          'pressure': 1019.85,
          'temperature': 12.6,
          'templow': 4.2,
          'uv_index': 1,
          'wind_bearing': 137,
          'wind_gust_speed': 38.59,
          'wind_speed': 23.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].3
  dict({
    'weather.met_office_wavertree': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 9.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 26,
          'pressure': 987.48,
          'temperature': 12.7,
          'templow': 8.2,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 42.66,
          'wind_speed': 23.94,
        }),
        dict({
          'apparent_temperature': 5.3,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 5,
          'pressure': 994.88,
          'temperature': 9.8,
          'templow': 7.7,
          'uv_index': 1,
          'wind_bearing': 251,
          'wind_gust_speed': 52.16,
          'wind_speed': 30.67,
        }),
        dict({
          'apparent_temperature': 5.9,
          'condition': 'partlycloudy',
          'datetime': '2024-11-26T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 6,
          'pressure': 1012.93,
          'temperature': 8.7,
          'templow': 3.8,
          'uv_index': 1,
          'wind_bearing': 265,
          'wind_gust_speed': 34.49,
          'wind_speed': 20.45,
        }),
        dict({
          'apparent_temperature': 3.3,
          'condition': 'rainy',
          'datetime': '2024-11-27T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 43,
          'pressure': 1014.39,
          'temperature': 6.7,
          'templow': 2.4,
          'uv_index': 1,
          'wind_bearing': 8,
          'wind_gust_speed': 32.18,
          'wind_speed': 18.54,
        }),
        dict({
          'apparent_temperature': 3.0,
          'condition': 'cloudy',
          'datetime': '2024-11-28T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1025.12,
          'temperature': 5.7,
          'templow': 3.8,
          'uv_index': 1,
          'wind_bearing': 104,
          'wind_gust_speed': 22.36,
          'wind_speed': 12.64,
        }),
        dict({
          'apparent_temperature': 4.9,
          'condition': 'cloudy',
          'datetime': '2024-11-29T00:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 11,
          'pressure': 1019.85,
          'temperature': 8.2,
          'templow': 7.0,
          'uv_index': 1,
          'wind_bearing': 137,
          'wind_gust_speed': 38.59,
          'wind_speed': 23.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].4
  dict({
    'weather.met_office_wavertree': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 6.8,
          'condition': 'rainy',
          'datetime': '2024-11-23T13:00:00+00:00',
          'precipitation': 0.52,
          'precipitation_probability': 65,
          'pressure': 986.83,
          'temperature': 9.9,
          'uv_index': 1,
          'wind_bearing': 178,
          'wind_gust_speed': 55.73,
          'wind_speed': 25.42,
        }),
        dict({
          'apparent_temperature': 8.4,
          'condition': 'cloudy',
          'datetime': '2024-11-23T14:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 12,
          'pressure': 986.34,
          'temperature': 11.1,
          'uv_index': 1,
          'wind_bearing': 179,
          'wind_gust_speed': 49.0,
          'wind_speed': 22.86,
        }),
        dict({
          'apparent_temperature': 9.8,
          'condition': 'rainy',
          'datetime': '2024-11-23T15:00:00+00:00',
          'precipitation': 0.09,
          'precipitation_probability': 37,
          'pressure': 986.13,
          'temperature': 12.0,
          'uv_index': 1,
          'wind_bearing': 182,
          'wind_gust_speed': 40.1,
          'wind_speed': 18.5,
        }),
        dict({
          'apparent_temperature': 10.8,
          'condition': 'rainy',
          'datetime': '2024-11-23T16:00:00+00:00',
          'precipitation': 0.27,
          'precipitation_probability': 36,
          'pressure': 986.6,
          'temperature': 12.6,
          'uv_index': 0,
          'wind_bearing': 197,
          'wind_gust_speed': 35.86,
          'wind_speed': 15.44,
        }),
        dict({
          'apparent_temperature': 11.3,
          'condition': 'cloudy',
          'datetime': '2024-11-23T17:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 11,
          'pressure': 987.1,
          'temperature': 12.9,
          'uv_index': 0,
          'wind_bearing': 203,
          'wind_gust_speed': 35.57,
          'wind_speed': 15.59,
        }),
        dict({
          'apparent_temperature': 11.3,
          'condition': 'cloudy',
          'datetime': '2024-11-23T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 7,
          'pressure': 987.1,
          'temperature': 13.0,
          'uv_index': 0,
          'wind_bearing': 177,
          'wind_gust_speed': 31.21,
          'wind_speed': 15.52,
        }),
        dict({
          'apparent_temperature': 11.1,
          'condition': 'pouring',
          'datetime': '2024-11-23T19:00:00+00:00',
          'precipitation': 0.51,
          'precipitation_probability': 74,
          'pressure': 986.82,
          'temperature': 13.0,
          'uv_index': 0,
          'wind_bearing': 177,
          'wind_gust_speed': 37.44,
          'wind_speed': 17.46,
        }),
        dict({
          'apparent_temperature': 11.2,
          'condition': 'cloudy',
          'datetime': '2024-11-23T20:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 11,
          'pressure': 986.92,
          'temperature': 13.7,
          'uv_index': 0,
          'wind_bearing': 187,
          'wind_gust_speed': 45.97,
          'wind_speed': 22.72,
        }),
        dict({
          'apparent_temperature': 11.7,
          'condition': 'rainy',
          'datetime': '2024-11-23T21:00:00+00:00',
          'precipitation': 0.11,
          'precipitation_probability': 30,
          'pressure': 986.82,
          'temperature': 14.0,
          'uv_index': 0,
          'wind_bearing': 178,
          'wind_gust_speed': 44.32,
          'wind_speed': 22.0,
        }),
        dict({
          'apparent_temperature': 11.4,
          'condition': 'cloudy',
          'datetime': '2024-11-23T22:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 12,
          'pressure': 986.31,
          'temperature': 14.0,
          'uv_index': 0,
          'wind_bearing': 176,
          'wind_gust_speed': 47.84,
          'wind_speed': 23.65,
        }),
        dict({
          'apparent_temperature': 11.4,
          'condition': 'cloudy',
          'datetime': '2024-11-23T23:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'pressure': 985.71,
          'temperature': 14.3,
          'uv_index': 0,
          'wind_bearing': 176,
          'wind_gust_speed': 51.44,
          'wind_speed': 26.57,
        }),
        dict({
          'apparent_temperature': 11.5,
          'condition': 'cloudy',
          'datetime': '2024-11-24T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'pressure': 984.92,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 171,
          'wind_gust_speed': 50.69,
          'wind_speed': 26.78,
        }),
        dict({
          'apparent_temperature': 11.6,
          'condition': 'rainy',
          'datetime': '2024-11-24T01:00:00+00:00',
          'precipitation': 0.17,
          'precipitation_probability': 40,
          'pressure': 984.22,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 170,
          'wind_gust_speed': 50.11,
          'wind_speed': 25.78,
        }),
        dict({
          'apparent_temperature': 11.3,
          'condition': 'pouring',
          'datetime': '2024-11-24T02:00:00+00:00',
          'precipitation': 0.21,
          'precipitation_probability': 74,
          'pressure': 983.51,
          'temperature': 14.2,
          'uv_index': 0,
          'wind_bearing': 176,
          'wind_gust_speed': 52.06,
          'wind_speed': 26.89,
        }),
        dict({
          'apparent_temperature': 11.7,
          'condition': 'pouring',
          'datetime': '2024-11-24T03:00:00+00:00',
          'precipitation': 0.34,
          'precipitation_probability': 73,
          'pressure': 983.1,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 187,
          'wind_gust_speed': 51.55,
          'wind_speed': 26.1,
        }),
        dict({
          'apparent_temperature': 11.7,
          'condition': 'rainy',
          'datetime': '2024-11-24T04:00:00+00:00',
          'precipitation': 0.28,
          'precipitation_probability': 50,
          'pressure': 983.1,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 189,
          'wind_gust_speed': 49.68,
          'wind_speed': 25.52,
        }),
        dict({
          'apparent_temperature': 11.8,
          'condition': 'rainy',
          'datetime': '2024-11-24T05:00:00+00:00',
          'precipitation': 0.25,
          'precipitation_probability': 47,
          'pressure': 983.3,
          'temperature': 14.3,
          'uv_index': 0,
          'wind_bearing': 202,
          'wind_gust_speed': 45.72,
          'wind_speed': 23.69,
        }),
        dict({
          'apparent_temperature': 10.7,
          'condition': 'rainy',
          'datetime': '2024-11-24T06:00:00+00:00',
          'precipitation': 0.3,
          'precipitation_probability': 42,
          'pressure': 983.96,
          'temperature': 13.4,
          'uv_index': 0,
          'wind_bearing': 216,
          'wind_gust_speed': 45.83,
          'wind_speed': 24.16,
        }),
        dict({
          'apparent_temperature': 10.1,
          'condition': 'rainy',
          'datetime': '2024-11-24T07:00:00+00:00',
          'precipitation': 0.16,
          'precipitation_probability': 40,
          'pressure': 984.58,
          'temperature': 12.5,
          'uv_index': 0,
          'wind_bearing': 214,
          'wind_gust_speed': 39.71,
          'wind_speed': 20.59,
        }),
        dict({
          'apparent_temperature': 9.5,
          'condition': 'rainy',
          'datetime': '2024-11-24T08:00:00+00:00',
          'precipitation': 0.08,
          'precipitation_probability': 38,
          'pressure': 985.48,
          'temperature': 11.9,
          'uv_index': 0,
          'wind_bearing': 209,
          'wind_gust_speed': 37.08,
          'wind_speed': 19.73,
        }),
        dict({
          'apparent_temperature': 9.1,
          'condition': 'rainy',
          'datetime': '2024-11-24T09:00:00+00:00',
          'precipitation': 0.04,
          'precipitation_probability': 26,
          'pressure': 986.38,
          'temperature': 11.5,
          'uv_index': 1,
          'wind_bearing': 201,
          'wind_gust_speed': 35.96,
          'wind_speed': 19.58,
        }),
        dict({
          'apparent_temperature': 9.0,
          'condition': 'rainy',
          'datetime': '2024-11-24T10:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 25,
          'pressure': 986.96,
          'temperature': 11.5,
          'uv_index': 1,
          'wind_bearing': 199,
          'wind_gust_speed': 37.01,
          'wind_speed': 20.59,
        }),
        dict({
          'apparent_temperature': 9.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T11:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 6,
          'pressure': 987.55,
          'temperature': 11.7,
          'uv_index': 1,
          'wind_bearing': 199,
          'wind_gust_speed': 36.22,
          'wind_speed': 20.45,
        }),
        dict({
          'apparent_temperature': 9.0,
          'condition': 'cloudy',
          'datetime': '2024-11-24T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.48,
          'temperature': 11.8,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 42.66,
          'wind_speed': 23.94,
        }),
        dict({
          'apparent_temperature': 8.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T13:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.57,
          'temperature': 11.8,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 45.36,
          'wind_speed': 25.45,
        }),
        dict({
          'apparent_temperature': 8.6,
          'condition': 'cloudy',
          'datetime': '2024-11-24T14:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.37,
          'temperature': 11.7,
          'uv_index': 1,
          'wind_bearing': 201,
          'wind_gust_speed': 46.94,
          'wind_speed': 26.39,
        }),
        dict({
          'apparent_temperature': 8.5,
          'condition': 'cloudy',
          'datetime': '2024-11-24T15:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'pressure': 987.27,
          'temperature': 11.6,
          'uv_index': 1,
          'wind_bearing': 198,
          'wind_gust_speed': 46.87,
          'wind_speed': 26.35,
        }),
        dict({
          'apparent_temperature': 8.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T16:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.08,
          'temperature': 11.2,
          'uv_index': 0,
          'wind_bearing': 196,
          'wind_gust_speed': 46.22,
          'wind_speed': 25.38,
        }),
        dict({
          'apparent_temperature': 8.0,
          'condition': 'cloudy',
          'datetime': '2024-11-24T17:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'pressure': 986.89,
          'temperature': 11.0,
          'uv_index': 0,
          'wind_bearing': 194,
          'wind_gust_speed': 45.68,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 7.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.7,
          'temperature': 10.9,
          'uv_index': 0,
          'wind_bearing': 196,
          'wind_gust_speed': 46.15,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 7.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T19:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.69,
          'temperature': 10.8,
          'uv_index': 0,
          'wind_bearing': 196,
          'wind_gust_speed': 45.43,
          'wind_speed': 24.95,
        }),
        dict({
          'apparent_temperature': 7.7,
          'condition': 'cloudy',
          'datetime': '2024-11-24T20:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.78,
          'temperature': 10.7,
          'uv_index': 0,
          'wind_bearing': 202,
          'wind_gust_speed': 45.07,
          'wind_speed': 24.55,
        }),
        dict({
          'apparent_temperature': 7.5,
          'condition': 'cloudy',
          'datetime': '2024-11-24T21:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 986.77,
          'temperature': 10.5,
          'uv_index': 0,
          'wind_bearing': 203,
          'wind_gust_speed': 46.4,
          'wind_speed': 25.49,
        }),
        dict({
          'apparent_temperature': 7.3,
          'condition': 'cloudy',
          'datetime': '2024-11-24T22:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'pressure': 987.04,
          'temperature': 10.5,
          'uv_index': 0,
          'wind_bearing': 204,
          'wind_gust_speed': 48.24,
          'wind_speed': 26.68,
        }),
        dict({
          'apparent_temperature': 7.1,
          'condition': 'cloudy',
          'datetime': '2024-11-24T23:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 987.04,
          'temperature': 10.3,
          'uv_index': 0,
          'wind_bearing': 207,
          'wind_gust_speed': 50.44,
          'wind_speed': 27.72,
        }),
        dict({
          'apparent_temperature': 7.1,
          'condition': 'cloudy',
          'datetime': '2024-11-25T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 23,
          'pressure': 987.12,
          'temperature': 10.2,
          'uv_index': 0,
          'wind_bearing': 211,
          'wind_gust_speed': 47.2,
          'wind_speed': 26.39,
        }),
        dict({
          'apparent_temperature': 6.9,
          'condition': 'cloudy',
          'datetime': '2024-11-25T01:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 11,
          'pressure': 987.41,
          'temperature': 10.0,
          'uv_index': 0,
          'wind_bearing': 215,
          'wind_gust_speed': 45.04,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 6.4,
          'condition': 'cloudy',
          'datetime': '2024-11-25T02:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 7,
          'pressure': 987.88,
          'temperature': 9.6,
          'uv_index': 0,
          'wind_bearing': 222,
          'wind_gust_speed': 46.87,
          'wind_speed': 25.7,
        }),
        dict({
          'apparent_temperature': 6.1,
          'condition': 'cloudy',
          'datetime': '2024-11-25T03:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 988.16,
          'temperature': 9.3,
          'uv_index': 0,
          'wind_bearing': 226,
          'wind_gust_speed': 44.71,
          'wind_speed': 24.88,
        }),
        dict({
          'apparent_temperature': 5.8,
          'condition': 'cloudy',
          'datetime': '2024-11-25T04:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'pressure': 988.58,
          'temperature': 9.1,
          'uv_index': 0,
          'wind_bearing': 228,
          'wind_gust_speed': 45.22,
          'wind_speed': 25.34,
        }),
        dict({
          'apparent_temperature': 5.4,
          'condition': 'clear-night',
          'datetime': '2024-11-25T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 989.1,
          'temperature': 8.8,
          'uv_index': 0,
          'wind_bearing': 232,
          'wind_gust_speed': 47.23,
          'wind_speed': 26.14,
        }),
        dict({
          'apparent_temperature': 5.1,
          'condition': 'clear-night',
          'datetime': '2024-11-25T06:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 989.61,
          'temperature': 8.7,
          'uv_index': 0,
          'wind_bearing': 235,
          'wind_gust_speed': 48.2,
          'wind_speed': 26.35,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'clear-night',
          'datetime': '2024-11-25T07:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 990.61,
          'temperature': 8.6,
          'uv_index': 0,
          'wind_bearing': 240,
          'wind_gust_speed': 47.81,
          'wind_speed': 26.78,
        }),
        dict({
          'apparent_temperature': 4.8,
          'condition': 'clear-night',
          'datetime': '2024-11-25T08:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 991.61,
          'temperature': 8.4,
          'uv_index': 0,
          'wind_bearing': 243,
          'wind_gust_speed': 47.56,
          'wind_speed': 26.86,
        }),
        dict({
          'apparent_temperature': 4.8,
          'condition': 'sunny',
          'datetime': '2024-11-25T09:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 992.52,
          'temperature': 8.4,
          'uv_index': 1,
          'wind_bearing': 243,
          'wind_gust_speed': 47.84,
          'wind_speed': 27.32,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T10:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'pressure': 993.42,
          'temperature': 8.7,
          'uv_index': 1,
          'wind_bearing': 245,
          'wind_gust_speed': 49.79,
          'wind_speed': 28.8,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T11:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 3,
          'pressure': 994.24,
          'temperature': 8.8,
          'uv_index': 1,
          'wind_bearing': 249,
          'wind_gust_speed': 52.09,
          'wind_speed': 30.38,
        }),
        dict({
          'apparent_temperature': 5.2,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T12:00:00+00:00',
          'precipitation': None,
          'precipitation_probability': 2,
          'pressure': 994.88,
          'temperature': 8.9,
          'uv_index': 1,
          'wind_bearing': 251,
          'wind_gust_speed': 52.16,
          'wind_speed': 30.67,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].5
  dict({
    'weather.met_office_wavertree': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 4.8,
          'condition': 'cloudy',
          'datetime': '2024-11-24T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 23,
          'pressure': 987.12,
          'temperature': 10.7,
          'templow': 7.0,
          'uv_index': None,
          'wind_bearing': 211,
          'wind_gust_speed': 47.2,
          'wind_speed': 26.39,
        }),
        dict({
          'apparent_temperature': 9.2,
          'condition': 'cloudy',
          'datetime': '2024-11-24T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 26,
          'pressure': 987.48,
          'temperature': 15.2,
          'templow': 11.9,
          'uv_index': 1,
          'wind_bearing': 203,
          'wind_gust_speed': 42.66,
          'wind_speed': 23.94,
        }),
        dict({
          'apparent_temperature': 4.2,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 6,
          'pressure': 1004.81,
          'temperature': 9.3,
          'templow': 4.4,
          'uv_index': None,
          'wind_bearing': 262,
          'wind_gust_speed': 47.99,
          'wind_speed': 29.23,
        }),
        dict({
          'apparent_temperature': 5.3,
          'condition': 'partlycloudy',
          'datetime': '2024-11-25T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 5,
          'pressure': 994.88,
          'temperature': 11.0,
          'templow': 8.4,
          'uv_index': 1,
          'wind_bearing': 251,
          'wind_gust_speed': 52.16,
          'wind_speed': 30.67,
        }),
        dict({
          'apparent_temperature': 1.3,
          'condition': 'cloudy',
          'datetime': '2024-11-26T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 44,
          'pressure': 1013.9,
          'temperature': 7.5,
          'templow': -0.4,
          'uv_index': None,
          'wind_bearing': 74,
          'wind_gust_speed': 19.51,
          'wind_speed': 11.41,
        }),
        dict({
          'apparent_temperature': 5.9,
          'condition': 'partlycloudy',
          'datetime': '2024-11-26T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 6,
          'pressure': 1012.93,
          'temperature': 10.1,
          'templow': 6.5,
          'uv_index': 1,
          'wind_bearing': 265,
          'wind_gust_speed': 34.49,
          'wind_speed': 20.45,
        }),
        dict({
          'apparent_temperature': 0.2,
          'condition': 'clear-night',
          'datetime': '2024-11-27T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1021.75,
          'temperature': 7.2,
          'templow': -3.0,
          'uv_index': None,
          'wind_bearing': 31,
          'wind_gust_speed': 19.94,
          'wind_speed': 11.84,
        }),
        dict({
          'apparent_temperature': 3.3,
          'condition': 'rainy',
          'datetime': '2024-11-27T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 43,
          'pressure': 1014.39,
          'temperature': 11.1,
          'templow': 3.0,
          'uv_index': 1,
          'wind_bearing': 8,
          'wind_gust_speed': 32.18,
          'wind_speed': 18.54,
        }),
        dict({
          'apparent_temperature': 1.6,
          'condition': 'cloudy',
          'datetime': '2024-11-28T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1023.82,
          'temperature': 8.2,
          'templow': -1.9,
          'uv_index': None,
          'wind_bearing': 131,
          'wind_gust_speed': 33.16,
          'wind_speed': 20.05,
        }),
        dict({
          'apparent_temperature': 3.0,
          'condition': 'cloudy',
          'datetime': '2024-11-28T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 9,
          'pressure': 1025.12,
          'temperature': 9.4,
          'templow': 1.3,
          'uv_index': 1,
          'wind_bearing': 104,
          'wind_gust_speed': 22.36,
          'wind_speed': 12.64,
        }),
        dict({
          'apparent_temperature': 5.0,
          'condition': 'cloudy',
          'datetime': '2024-11-29T00:00:00+00:00',
          'is_daytime': False,
          'precipitation': None,
          'precipitation_probability': 13,
          'pressure': 1016.88,
          'temperature': 10.8,
          'templow': -1.9,
          'uv_index': None,
          'wind_bearing': 151,
          'wind_gust_speed': 33.16,
          'wind_speed': 20.12,
        }),
        dict({
          'apparent_temperature': 4.9,
          'condition': 'cloudy',
          'datetime': '2024-11-29T12:00:00+00:00',
          'is_daytime': True,
          'precipitation': None,
          'precipitation_probability': 11,
          'pressure': 1019.85,
          'temperature': 12.6,
          'templow': 4.2,
          'uv_index': 1,
          'wind_bearing': 137,
          'wind_gust_speed': 38.59,
          'wind_speed': 23.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_subscription
  list([
    dict({
      'apparent_temperature': 6.8,
      'condition': 'rainy',
      'datetime': '2024-11-23T13:00:00+00:00',
      'precipitation': 0.52,
      'precipitation_probability': 65,
      'pressure': 986.83,
      'temperature': 9.9,
      'uv_index': 1,
      'wind_bearing': 178,
      'wind_gust_speed': 55.73,
      'wind_speed': 25.42,
    }),
    dict({
      'apparent_temperature': 8.4,
      'condition': 'cloudy',
      'datetime': '2024-11-23T14:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 12,
      'pressure': 986.34,
      'temperature': 11.1,
      'uv_index': 1,
      'wind_bearing': 179,
      'wind_gust_speed': 49.0,
      'wind_speed': 22.86,
    }),
    dict({
      'apparent_temperature': 9.8,
      'condition': 'rainy',
      'datetime': '2024-11-23T15:00:00+00:00',
      'precipitation': 0.09,
      'precipitation_probability': 37,
      'pressure': 986.13,
      'temperature': 12.0,
      'uv_index': 1,
      'wind_bearing': 182,
      'wind_gust_speed': 40.1,
      'wind_speed': 18.5,
    }),
    dict({
      'apparent_temperature': 10.8,
      'condition': 'rainy',
      'datetime': '2024-11-23T16:00:00+00:00',
      'precipitation': 0.27,
      'precipitation_probability': 36,
      'pressure': 986.6,
      'temperature': 12.6,
      'uv_index': 0,
      'wind_bearing': 197,
      'wind_gust_speed': 35.86,
      'wind_speed': 15.44,
    }),
    dict({
      'apparent_temperature': 11.3,
      'condition': 'cloudy',
      'datetime': '2024-11-23T17:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 11,
      'pressure': 987.1,
      'temperature': 12.9,
      'uv_index': 0,
      'wind_bearing': 203,
      'wind_gust_speed': 35.57,
      'wind_speed': 15.59,
    }),
    dict({
      'apparent_temperature': 11.3,
      'condition': 'cloudy',
      'datetime': '2024-11-23T18:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 7,
      'pressure': 987.1,
      'temperature': 13.0,
      'uv_index': 0,
      'wind_bearing': 177,
      'wind_gust_speed': 31.21,
      'wind_speed': 15.52,
    }),
    dict({
      'apparent_temperature': 11.1,
      'condition': 'pouring',
      'datetime': '2024-11-23T19:00:00+00:00',
      'precipitation': 0.51,
      'precipitation_probability': 74,
      'pressure': 986.82,
      'temperature': 13.0,
      'uv_index': 0,
      'wind_bearing': 177,
      'wind_gust_speed': 37.44,
      'wind_speed': 17.46,
    }),
    dict({
      'apparent_temperature': 11.2,
      'condition': 'cloudy',
      'datetime': '2024-11-23T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 11,
      'pressure': 986.92,
      'temperature': 13.7,
      'uv_index': 0,
      'wind_bearing': 187,
      'wind_gust_speed': 45.97,
      'wind_speed': 22.72,
    }),
    dict({
      'apparent_temperature': 11.7,
      'condition': 'rainy',
      'datetime': '2024-11-23T21:00:00+00:00',
      'precipitation': 0.11,
      'precipitation_probability': 30,
      'pressure': 986.82,
      'temperature': 14.0,
      'uv_index': 0,
      'wind_bearing': 178,
      'wind_gust_speed': 44.32,
      'wind_speed': 22.0,
    }),
    dict({
      'apparent_temperature': 11.4,
      'condition': 'cloudy',
      'datetime': '2024-11-23T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 12,
      'pressure': 986.31,
      'temperature': 14.0,
      'uv_index': 0,
      'wind_bearing': 176,
      'wind_gust_speed': 47.84,
      'wind_speed': 23.65,
    }),
    dict({
      'apparent_temperature': 11.4,
      'condition': 'cloudy',
      'datetime': '2024-11-23T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'pressure': 985.71,
      'temperature': 14.3,
      'uv_index': 0,
      'wind_bearing': 176,
      'wind_gust_speed': 51.44,
      'wind_speed': 26.57,
    }),
    dict({
      'apparent_temperature': 11.5,
      'condition': 'cloudy',
      'datetime': '2024-11-24T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'pressure': 984.92,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 171,
      'wind_gust_speed': 50.69,
      'wind_speed': 26.78,
    }),
    dict({
      'apparent_temperature': 11.6,
      'condition': 'rainy',
      'datetime': '2024-11-24T01:00:00+00:00',
      'precipitation': 0.17,
      'precipitation_probability': 40,
      'pressure': 984.22,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 170,
      'wind_gust_speed': 50.11,
      'wind_speed': 25.78,
    }),
    dict({
      'apparent_temperature': 11.3,
      'condition': 'pouring',
      'datetime': '2024-11-24T02:00:00+00:00',
      'precipitation': 0.21,
      'precipitation_probability': 74,
      'pressure': 983.51,
      'temperature': 14.2,
      'uv_index': 0,
      'wind_bearing': 176,
      'wind_gust_speed': 52.06,
      'wind_speed': 26.89,
    }),
    dict({
      'apparent_temperature': 11.7,
      'condition': 'pouring',
      'datetime': '2024-11-24T03:00:00+00:00',
      'precipitation': 0.34,
      'precipitation_probability': 73,
      'pressure': 983.1,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 187,
      'wind_gust_speed': 51.55,
      'wind_speed': 26.1,
    }),
    dict({
      'apparent_temperature': 11.7,
      'condition': 'rainy',
      'datetime': '2024-11-24T04:00:00+00:00',
      'precipitation': 0.28,
      'precipitation_probability': 50,
      'pressure': 983.1,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 189,
      'wind_gust_speed': 49.68,
      'wind_speed': 25.52,
    }),
    dict({
      'apparent_temperature': 11.8,
      'condition': 'rainy',
      'datetime': '2024-11-24T05:00:00+00:00',
      'precipitation': 0.25,
      'precipitation_probability': 47,
      'pressure': 983.3,
      'temperature': 14.3,
      'uv_index': 0,
      'wind_bearing': 202,
      'wind_gust_speed': 45.72,
      'wind_speed': 23.69,
    }),
    dict({
      'apparent_temperature': 10.7,
      'condition': 'rainy',
      'datetime': '2024-11-24T06:00:00+00:00',
      'precipitation': 0.3,
      'precipitation_probability': 42,
      'pressure': 983.96,
      'temperature': 13.4,
      'uv_index': 0,
      'wind_bearing': 216,
      'wind_gust_speed': 45.83,
      'wind_speed': 24.16,
    }),
    dict({
      'apparent_temperature': 10.1,
      'condition': 'rainy',
      'datetime': '2024-11-24T07:00:00+00:00',
      'precipitation': 0.16,
      'precipitation_probability': 40,
      'pressure': 984.58,
      'temperature': 12.5,
      'uv_index': 0,
      'wind_bearing': 214,
      'wind_gust_speed': 39.71,
      'wind_speed': 20.59,
    }),
    dict({
      'apparent_temperature': 9.5,
      'condition': 'rainy',
      'datetime': '2024-11-24T08:00:00+00:00',
      'precipitation': 0.08,
      'precipitation_probability': 38,
      'pressure': 985.48,
      'temperature': 11.9,
      'uv_index': 0,
      'wind_bearing': 209,
      'wind_gust_speed': 37.08,
      'wind_speed': 19.73,
    }),
    dict({
      'apparent_temperature': 9.1,
      'condition': 'rainy',
      'datetime': '2024-11-24T09:00:00+00:00',
      'precipitation': 0.04,
      'precipitation_probability': 26,
      'pressure': 986.38,
      'temperature': 11.5,
      'uv_index': 1,
      'wind_bearing': 201,
      'wind_gust_speed': 35.96,
      'wind_speed': 19.58,
    }),
    dict({
      'apparent_temperature': 9.0,
      'condition': 'rainy',
      'datetime': '2024-11-24T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'pressure': 986.96,
      'temperature': 11.5,
      'uv_index': 1,
      'wind_bearing': 199,
      'wind_gust_speed': 37.01,
      'wind_speed': 20.59,
    }),
    dict({
      'apparent_temperature': 9.2,
      'condition': 'cloudy',
      'datetime': '2024-11-24T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 6,
      'pressure': 987.55,
      'temperature': 11.7,
      'uv_index': 1,
      'wind_bearing': 199,
      'wind_gust_speed': 36.22,
      'wind_speed': 20.45,
    }),
    dict({
      'apparent_temperature': 9.0,
      'condition': 'cloudy',
      'datetime': '2024-11-24T12:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.48,
      'temperature': 11.8,
      'uv_index': 1,
      'wind_bearing': 203,
      'wind_gust_speed': 42.66,
      'wind_speed': 23.94,
    }),
    dict({
      'apparent_temperature': 8.8,
      'condition': 'cloudy',
      'datetime': '2024-11-24T13:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.57,
      'temperature': 11.8,
      'uv_index': 1,
      'wind_bearing': 203,
      'wind_gust_speed': 45.36,
      'wind_speed': 25.45,
    }),
    dict({
      'apparent_temperature': 8.6,
      'condition': 'cloudy',
      'datetime': '2024-11-24T14:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.37,
      'temperature': 11.7,
      'uv_index': 1,
      'wind_bearing': 201,
      'wind_gust_speed': 46.94,
      'wind_speed': 26.39,
    }),
    dict({
      'apparent_temperature': 8.5,
      'condition': 'cloudy',
      'datetime': '2024-11-24T15:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 4,
      'pressure': 987.27,
      'temperature': 11.6,
      'uv_index': 1,
      'wind_bearing': 198,
      'wind_gust_speed': 46.87,
      'wind_speed': 26.35,
    }),
    dict({
      'apparent_temperature': 8.2,
      'condition': 'cloudy',
      'datetime': '2024-11-24T16:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.08,
      'temperature': 11.2,
      'uv_index': 0,
      'wind_bearing': 196,
      'wind_gust_speed': 46.22,
      'wind_speed': 25.38,
    }),
    dict({
      'apparent_temperature': 8.0,
      'condition': 'cloudy',
      'datetime': '2024-11-24T17:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 4,
      'pressure': 986.89,
      'temperature': 11.0,
      'uv_index': 0,
      'wind_bearing': 194,
      'wind_gust_speed': 45.68,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 7.8,
      'condition': 'cloudy',
      'datetime': '2024-11-24T18:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.7,
      'temperature': 10.9,
      'uv_index': 0,
      'wind_bearing': 196,
      'wind_gust_speed': 46.15,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 7.8,
      'condition': 'cloudy',
      'datetime': '2024-11-24T19:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.69,
      'temperature': 10.8,
      'uv_index': 0,
      'wind_bearing': 196,
      'wind_gust_speed': 45.43,
      'wind_speed': 24.95,
    }),
    dict({
      'apparent_temperature': 7.7,
      'condition': 'cloudy',
      'datetime': '2024-11-24T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.78,
      'temperature': 10.7,
      'uv_index': 0,
      'wind_bearing': 202,
      'wind_gust_speed': 45.07,
      'wind_speed': 24.55,
    }),
    dict({
      'apparent_temperature': 7.5,
      'condition': 'cloudy',
      'datetime': '2024-11-24T21:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.77,
      'temperature': 10.5,
      'uv_index': 0,
      'wind_bearing': 203,
      'wind_gust_speed': 46.4,
      'wind_speed': 25.49,
    }),
    dict({
      'apparent_temperature': 7.3,
      'condition': 'cloudy',
      'datetime': '2024-11-24T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 4,
      'pressure': 987.04,
      'temperature': 10.5,
      'uv_index': 0,
      'wind_bearing': 204,
      'wind_gust_speed': 48.24,
      'wind_speed': 26.68,
    }),
    dict({
      'apparent_temperature': 7.1,
      'condition': 'cloudy',
      'datetime': '2024-11-24T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.04,
      'temperature': 10.3,
      'uv_index': 0,
      'wind_bearing': 207,
      'wind_gust_speed': 50.44,
      'wind_speed': 27.72,
    }),
    dict({
      'apparent_temperature': 7.1,
      'condition': 'cloudy',
      'datetime': '2024-11-25T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 23,
      'pressure': 987.12,
      'temperature': 10.2,
      'uv_index': 0,
      'wind_bearing': 211,
      'wind_gust_speed': 47.2,
      'wind_speed': 26.39,
    }),
    dict({
      'apparent_temperature': 6.9,
      'condition': 'cloudy',
      'datetime': '2024-11-25T01:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 11,
      'pressure': 987.41,
      'temperature': 10.0,
      'uv_index': 0,
      'wind_bearing': 215,
      'wind_gust_speed': 45.04,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 6.4,
      'condition': 'cloudy',
      'datetime': '2024-11-25T02:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 7,
      'pressure': 987.88,
      'temperature': 9.6,
      'uv_index': 0,
      'wind_bearing': 222,
      'wind_gust_speed': 46.87,
      'wind_speed': 25.7,
    }),
    dict({
      'apparent_temperature': 6.1,
      'condition': 'cloudy',
      'datetime': '2024-11-25T03:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 988.16,
      'temperature': 9.3,
      'uv_index': 0,
      'wind_bearing': 226,
      'wind_gust_speed': 44.71,
      'wind_speed': 24.88,
    }),
    dict({
      'apparent_temperature': 5.8,
      'condition': 'cloudy',
      'datetime': '2024-11-25T04:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 988.58,
      'temperature': 9.1,
      'uv_index': 0,
      'wind_bearing': 228,
      'wind_gust_speed': 45.22,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 5.4,
      'condition': 'clear-night',
      'datetime': '2024-11-25T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 989.1,
      'temperature': 8.8,
      'uv_index': 0,
      'wind_bearing': 232,
      'wind_gust_speed': 47.23,
      'wind_speed': 26.14,
    }),
    dict({
      'apparent_temperature': 5.1,
      'condition': 'clear-night',
      'datetime': '2024-11-25T06:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 989.61,
      'temperature': 8.7,
      'uv_index': 0,
      'wind_bearing': 235,
      'wind_gust_speed': 48.2,
      'wind_speed': 26.35,
    }),
    dict({
      'apparent_temperature': 5.0,
      'condition': 'clear-night',
      'datetime': '2024-11-25T07:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 990.61,
      'temperature': 8.6,
      'uv_index': 0,
      'wind_bearing': 240,
      'wind_gust_speed': 47.81,
      'wind_speed': 26.78,
    }),
    dict({
      'apparent_temperature': 4.8,
      'condition': 'clear-night',
      'datetime': '2024-11-25T08:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 991.61,
      'temperature': 8.4,
      'uv_index': 0,
      'wind_bearing': 243,
      'wind_gust_speed': 47.56,
      'wind_speed': 26.86,
    }),
    dict({
      'apparent_temperature': 4.8,
      'condition': 'sunny',
      'datetime': '2024-11-25T09:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 992.52,
      'temperature': 8.4,
      'uv_index': 1,
      'wind_bearing': 243,
      'wind_gust_speed': 47.84,
      'wind_speed': 27.32,
    }),
    dict({
      'apparent_temperature': 5.0,
      'condition': 'partlycloudy',
      'datetime': '2024-11-25T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 993.42,
      'temperature': 8.7,
      'uv_index': 1,
      'wind_bearing': 245,
      'wind_gust_speed': 49.79,
      'wind_speed': 28.8,
    }),
    dict({
      'apparent_temperature': 5.0,
      'condition': 'partlycloudy',
      'datetime': '2024-11-25T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 3,
      'pressure': 994.24,
      'temperature': 8.8,
      'uv_index': 1,
      'wind_bearing': 249,
      'wind_gust_speed': 52.09,
      'wind_speed': 30.38,
    }),
    dict({
      'apparent_temperature': 5.2,
      'condition': 'partlycloudy',
      'datetime': '2024-11-25T12:00:00+00:00',
      'precipitation': None,
      'precipitation_probability': 2,
      'pressure': 994.88,
      'temperature': 8.9,
      'uv_index': 1,
      'wind_bearing': 251,
      'wind_gust_speed': 52.16,
      'wind_speed': 30.67,
    }),
  ])
# ---
# name: test_forecast_subscription.1
  list([
    dict({
      'apparent_temperature': 6.8,
      'condition': 'rainy',
      'datetime': '2024-11-23T13:00:00+00:00',
      'precipitation': 0.52,
      'precipitation_probability': 65,
      'pressure': 986.83,
      'temperature': 9.9,
      'uv_index': 1,
      'wind_bearing': 178,
      'wind_gust_speed': 55.73,
      'wind_speed': 25.42,
    }),
    dict({
      'apparent_temperature': 8.4,
      'condition': 'cloudy',
      'datetime': '2024-11-23T14:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 12,
      'pressure': 986.34,
      'temperature': 11.1,
      'uv_index': 1,
      'wind_bearing': 179,
      'wind_gust_speed': 49.0,
      'wind_speed': 22.86,
    }),
    dict({
      'apparent_temperature': 9.8,
      'condition': 'rainy',
      'datetime': '2024-11-23T15:00:00+00:00',
      'precipitation': 0.09,
      'precipitation_probability': 37,
      'pressure': 986.13,
      'temperature': 12.0,
      'uv_index': 1,
      'wind_bearing': 182,
      'wind_gust_speed': 40.1,
      'wind_speed': 18.5,
    }),
    dict({
      'apparent_temperature': 10.8,
      'condition': 'rainy',
      'datetime': '2024-11-23T16:00:00+00:00',
      'precipitation': 0.27,
      'precipitation_probability': 36,
      'pressure': 986.6,
      'temperature': 12.6,
      'uv_index': 0,
      'wind_bearing': 197,
      'wind_gust_speed': 35.86,
      'wind_speed': 15.44,
    }),
    dict({
      'apparent_temperature': 11.3,
      'condition': 'cloudy',
      'datetime': '2024-11-23T17:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 11,
      'pressure': 987.1,
      'temperature': 12.9,
      'uv_index': 0,
      'wind_bearing': 203,
      'wind_gust_speed': 35.57,
      'wind_speed': 15.59,
    }),
    dict({
      'apparent_temperature': 11.3,
      'condition': 'cloudy',
      'datetime': '2024-11-23T18:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 7,
      'pressure': 987.1,
      'temperature': 13.0,
      'uv_index': 0,
      'wind_bearing': 177,
      'wind_gust_speed': 31.21,
      'wind_speed': 15.52,
    }),
    dict({
      'apparent_temperature': 11.1,
      'condition': 'pouring',
      'datetime': '2024-11-23T19:00:00+00:00',
      'precipitation': 0.51,
      'precipitation_probability': 74,
      'pressure': 986.82,
      'temperature': 13.0,
      'uv_index': 0,
      'wind_bearing': 177,
      'wind_gust_speed': 37.44,
      'wind_speed': 17.46,
    }),
    dict({
      'apparent_temperature': 11.2,
      'condition': 'cloudy',
      'datetime': '2024-11-23T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 11,
      'pressure': 986.92,
      'temperature': 13.7,
      'uv_index': 0,
      'wind_bearing': 187,
      'wind_gust_speed': 45.97,
      'wind_speed': 22.72,
    }),
    dict({
      'apparent_temperature': 11.7,
      'condition': 'rainy',
      'datetime': '2024-11-23T21:00:00+00:00',
      'precipitation': 0.11,
      'precipitation_probability': 30,
      'pressure': 986.82,
      'temperature': 14.0,
      'uv_index': 0,
      'wind_bearing': 178,
      'wind_gust_speed': 44.32,
      'wind_speed': 22.0,
    }),
    dict({
      'apparent_temperature': 11.4,
      'condition': 'cloudy',
      'datetime': '2024-11-23T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 12,
      'pressure': 986.31,
      'temperature': 14.0,
      'uv_index': 0,
      'wind_bearing': 176,
      'wind_gust_speed': 47.84,
      'wind_speed': 23.65,
    }),
    dict({
      'apparent_temperature': 11.4,
      'condition': 'cloudy',
      'datetime': '2024-11-23T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'pressure': 985.71,
      'temperature': 14.3,
      'uv_index': 0,
      'wind_bearing': 176,
      'wind_gust_speed': 51.44,
      'wind_speed': 26.57,
    }),
    dict({
      'apparent_temperature': 11.5,
      'condition': 'cloudy',
      'datetime': '2024-11-24T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'pressure': 984.92,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 171,
      'wind_gust_speed': 50.69,
      'wind_speed': 26.78,
    }),
    dict({
      'apparent_temperature': 11.6,
      'condition': 'rainy',
      'datetime': '2024-11-24T01:00:00+00:00',
      'precipitation': 0.17,
      'precipitation_probability': 40,
      'pressure': 984.22,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 170,
      'wind_gust_speed': 50.11,
      'wind_speed': 25.78,
    }),
    dict({
      'apparent_temperature': 11.3,
      'condition': 'pouring',
      'datetime': '2024-11-24T02:00:00+00:00',
      'precipitation': 0.21,
      'precipitation_probability': 74,
      'pressure': 983.51,
      'temperature': 14.2,
      'uv_index': 0,
      'wind_bearing': 176,
      'wind_gust_speed': 52.06,
      'wind_speed': 26.89,
    }),
    dict({
      'apparent_temperature': 11.7,
      'condition': 'pouring',
      'datetime': '2024-11-24T03:00:00+00:00',
      'precipitation': 0.34,
      'precipitation_probability': 73,
      'pressure': 983.1,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 187,
      'wind_gust_speed': 51.55,
      'wind_speed': 26.1,
    }),
    dict({
      'apparent_temperature': 11.7,
      'condition': 'rainy',
      'datetime': '2024-11-24T04:00:00+00:00',
      'precipitation': 0.28,
      'precipitation_probability': 50,
      'pressure': 983.1,
      'temperature': 14.4,
      'uv_index': 0,
      'wind_bearing': 189,
      'wind_gust_speed': 49.68,
      'wind_speed': 25.52,
    }),
    dict({
      'apparent_temperature': 11.8,
      'condition': 'rainy',
      'datetime': '2024-11-24T05:00:00+00:00',
      'precipitation': 0.25,
      'precipitation_probability': 47,
      'pressure': 983.3,
      'temperature': 14.3,
      'uv_index': 0,
      'wind_bearing': 202,
      'wind_gust_speed': 45.72,
      'wind_speed': 23.69,
    }),
    dict({
      'apparent_temperature': 10.7,
      'condition': 'rainy',
      'datetime': '2024-11-24T06:00:00+00:00',
      'precipitation': 0.3,
      'precipitation_probability': 42,
      'pressure': 983.96,
      'temperature': 13.4,
      'uv_index': 0,
      'wind_bearing': 216,
      'wind_gust_speed': 45.83,
      'wind_speed': 24.16,
    }),
    dict({
      'apparent_temperature': 10.1,
      'condition': 'rainy',
      'datetime': '2024-11-24T07:00:00+00:00',
      'precipitation': 0.16,
      'precipitation_probability': 40,
      'pressure': 984.58,
      'temperature': 12.5,
      'uv_index': 0,
      'wind_bearing': 214,
      'wind_gust_speed': 39.71,
      'wind_speed': 20.59,
    }),
    dict({
      'apparent_temperature': 9.5,
      'condition': 'rainy',
      'datetime': '2024-11-24T08:00:00+00:00',
      'precipitation': 0.08,
      'precipitation_probability': 38,
      'pressure': 985.48,
      'temperature': 11.9,
      'uv_index': 0,
      'wind_bearing': 209,
      'wind_gust_speed': 37.08,
      'wind_speed': 19.73,
    }),
    dict({
      'apparent_temperature': 9.1,
      'condition': 'rainy',
      'datetime': '2024-11-24T09:00:00+00:00',
      'precipitation': 0.04,
      'precipitation_probability': 26,
      'pressure': 986.38,
      'temperature': 11.5,
      'uv_index': 1,
      'wind_bearing': 201,
      'wind_gust_speed': 35.96,
      'wind_speed': 19.58,
    }),
    dict({
      'apparent_temperature': 9.0,
      'condition': 'rainy',
      'datetime': '2024-11-24T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'pressure': 986.96,
      'temperature': 11.5,
      'uv_index': 1,
      'wind_bearing': 199,
      'wind_gust_speed': 37.01,
      'wind_speed': 20.59,
    }),
    dict({
      'apparent_temperature': 9.2,
      'condition': 'cloudy',
      'datetime': '2024-11-24T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 6,
      'pressure': 987.55,
      'temperature': 11.7,
      'uv_index': 1,
      'wind_bearing': 199,
      'wind_gust_speed': 36.22,
      'wind_speed': 20.45,
    }),
    dict({
      'apparent_temperature': 9.0,
      'condition': 'cloudy',
      'datetime': '2024-11-24T12:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.48,
      'temperature': 11.8,
      'uv_index': 1,
      'wind_bearing': 203,
      'wind_gust_speed': 42.66,
      'wind_speed': 23.94,
    }),
    dict({
      'apparent_temperature': 8.8,
      'condition': 'cloudy',
      'datetime': '2024-11-24T13:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.57,
      'temperature': 11.8,
      'uv_index': 1,
      'wind_bearing': 203,
      'wind_gust_speed': 45.36,
      'wind_speed': 25.45,
    }),
    dict({
      'apparent_temperature': 8.6,
      'condition': 'cloudy',
      'datetime': '2024-11-24T14:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.37,
      'temperature': 11.7,
      'uv_index': 1,
      'wind_bearing': 201,
      'wind_gust_speed': 46.94,
      'wind_speed': 26.39,
    }),
    dict({
      'apparent_temperature': 8.5,
      'condition': 'cloudy',
      'datetime': '2024-11-24T15:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 4,
      'pressure': 987.27,
      'temperature': 11.6,
      'uv_index': 1,
      'wind_bearing': 198,
      'wind_gust_speed': 46.87,
      'wind_speed': 26.35,
    }),
    dict({
      'apparent_temperature': 8.2,
      'condition': 'cloudy',
      'datetime': '2024-11-24T16:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.08,
      'temperature': 11.2,
      'uv_index': 0,
      'wind_bearing': 196,
      'wind_gust_speed': 46.22,
      'wind_speed': 25.38,
    }),
    dict({
      'apparent_temperature': 8.0,
      'condition': 'cloudy',
      'datetime': '2024-11-24T17:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 4,
      'pressure': 986.89,
      'temperature': 11.0,
      'uv_index': 0,
      'wind_bearing': 194,
      'wind_gust_speed': 45.68,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 7.8,
      'condition': 'cloudy',
      'datetime': '2024-11-24T18:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.7,
      'temperature': 10.9,
      'uv_index': 0,
      'wind_bearing': 196,
      'wind_gust_speed': 46.15,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 7.8,
      'condition': 'cloudy',
      'datetime': '2024-11-24T19:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.69,
      'temperature': 10.8,
      'uv_index': 0,
      'wind_bearing': 196,
      'wind_gust_speed': 45.43,
      'wind_speed': 24.95,
    }),
    dict({
      'apparent_temperature': 7.7,
      'condition': 'cloudy',
      'datetime': '2024-11-24T20:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.78,
      'temperature': 10.7,
      'uv_index': 0,
      'wind_bearing': 202,
      'wind_gust_speed': 45.07,
      'wind_speed': 24.55,
    }),
    dict({
      'apparent_temperature': 7.5,
      'condition': 'cloudy',
      'datetime': '2024-11-24T21:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 986.77,
      'temperature': 10.5,
      'uv_index': 0,
      'wind_bearing': 203,
      'wind_gust_speed': 46.4,
      'wind_speed': 25.49,
    }),
    dict({
      'apparent_temperature': 7.3,
      'condition': 'cloudy',
      'datetime': '2024-11-24T22:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 4,
      'pressure': 987.04,
      'temperature': 10.5,
      'uv_index': 0,
      'wind_bearing': 204,
      'wind_gust_speed': 48.24,
      'wind_speed': 26.68,
    }),
    dict({
      'apparent_temperature': 7.1,
      'condition': 'cloudy',
      'datetime': '2024-11-24T23:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 987.04,
      'temperature': 10.3,
      'uv_index': 0,
      'wind_bearing': 207,
      'wind_gust_speed': 50.44,
      'wind_speed': 27.72,
    }),
    dict({
      'apparent_temperature': 7.1,
      'condition': 'cloudy',
      'datetime': '2024-11-25T00:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 23,
      'pressure': 987.12,
      'temperature': 10.2,
      'uv_index': 0,
      'wind_bearing': 211,
      'wind_gust_speed': 47.2,
      'wind_speed': 26.39,
    }),
    dict({
      'apparent_temperature': 6.9,
      'condition': 'cloudy',
      'datetime': '2024-11-25T01:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 11,
      'pressure': 987.41,
      'temperature': 10.0,
      'uv_index': 0,
      'wind_bearing': 215,
      'wind_gust_speed': 45.04,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 6.4,
      'condition': 'cloudy',
      'datetime': '2024-11-25T02:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 7,
      'pressure': 987.88,
      'temperature': 9.6,
      'uv_index': 0,
      'wind_bearing': 222,
      'wind_gust_speed': 46.87,
      'wind_speed': 25.7,
    }),
    dict({
      'apparent_temperature': 6.1,
      'condition': 'cloudy',
      'datetime': '2024-11-25T03:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 988.16,
      'temperature': 9.3,
      'uv_index': 0,
      'wind_bearing': 226,
      'wind_gust_speed': 44.71,
      'wind_speed': 24.88,
    }),
    dict({
      'apparent_temperature': 5.8,
      'condition': 'cloudy',
      'datetime': '2024-11-25T04:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 5,
      'pressure': 988.58,
      'temperature': 9.1,
      'uv_index': 0,
      'wind_bearing': 228,
      'wind_gust_speed': 45.22,
      'wind_speed': 25.34,
    }),
    dict({
      'apparent_temperature': 5.4,
      'condition': 'clear-night',
      'datetime': '2024-11-25T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 989.1,
      'temperature': 8.8,
      'uv_index': 0,
      'wind_bearing': 232,
      'wind_gust_speed': 47.23,
      'wind_speed': 26.14,
    }),
    dict({
      'apparent_temperature': 5.1,
      'condition': 'clear-night',
      'datetime': '2024-11-25T06:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 989.61,
      'temperature': 8.7,
      'uv_index': 0,
      'wind_bearing': 235,
      'wind_gust_speed': 48.2,
      'wind_speed': 26.35,
    }),
    dict({
      'apparent_temperature': 5.0,
      'condition': 'clear-night',
      'datetime': '2024-11-25T07:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 990.61,
      'temperature': 8.6,
      'uv_index': 0,
      'wind_bearing': 240,
      'wind_gust_speed': 47.81,
      'wind_speed': 26.78,
    }),
    dict({
      'apparent_temperature': 4.8,
      'condition': 'clear-night',
      'datetime': '2024-11-25T08:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 991.61,
      'temperature': 8.4,
      'uv_index': 0,
      'wind_bearing': 243,
      'wind_gust_speed': 47.56,
      'wind_speed': 26.86,
    }),
    dict({
      'apparent_temperature': 4.8,
      'condition': 'sunny',
      'datetime': '2024-11-25T09:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 992.52,
      'temperature': 8.4,
      'uv_index': 1,
      'wind_bearing': 243,
      'wind_gust_speed': 47.84,
      'wind_speed': 27.32,
    }),
    dict({
      'apparent_temperature': 5.0,
      'condition': 'partlycloudy',
      'datetime': '2024-11-25T10:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'pressure': 993.42,
      'temperature': 8.7,
      'uv_index': 1,
      'wind_bearing': 245,
      'wind_gust_speed': 49.79,
      'wind_speed': 28.8,
    }),
    dict({
      'apparent_temperature': 5.0,
      'condition': 'partlycloudy',
      'datetime': '2024-11-25T11:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 3,
      'pressure': 994.24,
      'temperature': 8.8,
      'uv_index': 1,
      'wind_bearing': 249,
      'wind_gust_speed': 52.09,
      'wind_speed': 30.38,
    }),
    dict({
      'apparent_temperature': 5.2,
      'condition': 'partlycloudy',
      'datetime': '2024-11-25T12:00:00+00:00',
      'precipitation': None,
      'precipitation_probability': 2,
      'pressure': 994.88,
      'temperature': 8.9,
      'uv_index': 1,
      'wind_bearing': 251,
      'wind_gust_speed': 52.16,
      'wind_speed': 30.67,
    }),
  ])
# ---
